microconfig-core/src/test/resources/repo/components/exceptions/bad/badExpression/exception.dev
Can't build configs for root component 'badExpression[dev]'.
Exception in '../components/exceptions/cyclic/badExpression/application.yaml:1'
Property: key=#{10/0}
Can't evaluate '#{10/0}'
/ by zero